--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,6 +83,8 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply plugin: "com.android.application"
+apply plugin: "com.google.gms.google-services"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -268,6 +270,8 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
+    implementation platform('com.google.firebase:firebase-bom:30.0.0')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
