--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-router-flux": "^4.3.1",
     "react-native-svg": "^9.13.6",
     "react-native-wheel-of-fortune": "^1.5.4"
   },
